--- a/app/views/caboose_rets/saved_properties/user_report.html.erb
+++ b/app/views/caboose_rets/saved_properties/user_report.html.erb
@@ -1,6 +1,6 @@
 <h1>User Report</h1>
 
-<p>Last 30 Days</p>
+<p>Since <%= @d.in_time_zone('Central Time (US & Canada)').strftime('%B %-d, %Y') %></p>
 
 <p>New users registered: <%= @users.count %></p>
 
