--- a/app/views/caboose_rets/rets_mailer/user_welcome.html.erb
+++ b/app/views/caboose_rets/rets_mailer/user_welcome.html.erb
@@ -1,6 +1,6 @@
 <div style="text-align:center;margin-bottom:20px;padding:20px;background-color:<%= @color %>;">
 	<a style="display:inline-block;text-decoration:none;" href="<%= @url %>" target="_blank">
-		<img style="display:block;" src="<%= @logo_url %>" alt="<%= @site.description %>" width="220" />
+		<img style="display:block;margin:0;" src="<%= @logo_url %>" alt="<%= @site.description %>" width="220" />
 	</a>
 </div>
 
@@ -12,7 +12,7 @@
 </div>
 
 <div style="text-align:center;margin-top:20px;padding:20px;background-color:<%= @color %>;">
-	<p style="margin-top:20px;font-size:13px;">
+	<p style="margin:0;font-size:13px;">
 		<a style="color:#fff;text-decoration:none;font-size:13px;display:inline-block;" target="_blank" href="<%= @unsubscribe_url %>">
 			Unsubscribe
 		</a>
