--- a/app/views/caboose_rets/rets_mailer/property_status_change.html.erb
+++ b/app/views/caboose_rets/rets_mailer/property_status_change.html.erb
@@ -20,7 +20,7 @@
         <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
             <tr>
                 <td align="center" valign="top">
-                    <table border="0" cellpadding="20" cellspacing="0" width="800" id="emailContainer">
+                    <table border="0" cellpadding="20" cellspacing="0" width="100%" id="emailContainer">
                         <tr>
                             <td align="center" valign="top">
                                 
@@ -32,7 +32,7 @@
 	</a>
 </div>
 
-<div style="text-align:center;padding:20px;">
+<div style="text-align:center;padding:20px;max-width:800px;margin:0 auto;">
 	<h2>Status Changed</h2>
 	
 	<% if @property %>
